CMF 2.0.0-beta2 (unreleased)

  Others

    - CMFDefault skins and views: Removed 'full_metadata_edit_form'.
      'metadata_edit_form' is now used for the full set of metadata.


CMF 2.0.0-beta (2006/02/26)

  New Features

    - CMFDefault skins: Improved support for custom i18n domains.
      If setStatus is used portal status messages are now translated before
      they are added to the query string of a redirect.

    - CMFDefault utils:  Added 'translate' function.
      This should only be used if the message can't be translated in the
      template. It is a small shortcut to getGlobalTranslationService.

    - CMFDefault: Added experimental Zope 3-style browser views.
      The views are disabled by default. See README.txt of the browser
      sub-package for further information.

    - skins: All page templates now use unicode.
      Please make sure to pass only 'ascii' strings or unicode to them.

    - CMFDefault utils: Added 'decode' function.
      It decodes values using the default_charset of the site.

  Bug Fixes

    - CMFDefault setuphandlers: Disabled password encryption.
      'registeredNotify' and 'mailPassword' don't work with encrypted
      passwords.

    - CMFDefault skins: Fixed clipboard data validation.
      Split off validateClipboardData from folder_paste_control.

    - CMFDefault skins: Refactored and improved discussion_reply_form.

    - CMFDefault utils: Fixed html_marshal function.
      The return values are no longer escaped to avoid double quoting and no
      longer stringified. The page templates take care of these steps.

  Others

    - CMFDefault RegistrationTool and skins: Refactored mail creation.
      'mailPassword' now calls the 'password_email' script and
      'registeredNotify' the 'registered_email' script. These scripts call the
      templates and do the necessary string decoding and encoding.

    - CMFDefault skins: Refactored 'logged_in' page and 'password_form'.