@@ -11,12 +11,12 @@ Converting skins to views:
 
       form_widgets.pt -> templates/form_widgets.pt
 
-  [x] index_html:
+  [x] IFolderish @@view.html:
 
       index_html.py -> FolderView
       index_html_template.pt -> folder.pt
 
-  [x] folder_contents:
+  [x] IFolderish @@edit.html:
 
       folder_contents.py -> FolderContentsView
       folder_contents_template.pt -> templates/folder_contents.pt
@@ -32,24 +32,24 @@ Converting skins to views:
       folder_top_control.py -> FolderContentsView.top_control
       folder_bottom_control.py -> FolderContentsView.bottom_control
 
-  [x] folder_edit_form:
+  [x] IMutableMinimalDublinCore @@properties.html:
 
       folder_edit_form.py -> MetadataMinimalEditView
       folder_edit_template.pt -> templates/metadata_minimal_edit.pt
       folder_edit_control.py -> MetadataMinimalEditView.edit_control
 
-  [x] metadata_edit_form:
+  [x] IMutableDublinCore @@properties.html:
 
       metadata_edit_form.py -> MetadataEditView
       metadata_edit_template.pt -> templates/metadata_edit.pt
       metadata_edit_control.py -> MetadataEditView.edit_control
 
-  [x] document_view:
+  [x] IDocument @@view.html:
 
-      document_view.py -> DocumentView
+      document_view.py, newsitem_view.py -> DocumentView
       document_view_template.pt -> document.pt
 
-  [x] document_edit_form:
+  [x] IMutableDocument @@edit.html:
 
       document_edit_form.py -> DocumentEditView
       document_edit_template.pt -> templates/document_edit.pt
@@ -57,12 +57,7 @@ Converting skins to views:
       validateTextFile.py -> DocumentEditView.validateTextFile
       document_edit_control.py -> DocumentEditView.edit_control
 
-  [x] newsitem_view:
-
-      newsitem_view.py -> DocumentView
-      document_view_template.pt -> document.pt
-
-  [x] newsitem_edit_form:
+  [x] IMutableNewsItem @@edit.html:
 
       newsitem_edit_form.py -> NewsItemEditView
       newsitem_edit_template.pt -> templates/newsitem_edit.pt
@@ -70,39 +65,34 @@ Converting skins to views:
       validateTextFile.py -> DocumentEditView.validateTextFile
       newsitem_edit_control.py -> NewsItemEditView.edit_control
 
-  [x] link_view:
+  [x] ILink @@view.html:
 
-      link_view.py -> LinkView
+      link_view.py, favorite_view.py -> LinkView
       link_view_template.pt -> templates/link.pt
 
-  [x] link_edit_form:
+  [x] IMutableLink @@edit.html:
 
       link_edit_form.py -> LinkEditView
       link_edit_template.pt -> templates/link_edit.pt
       link_edit_control.py -> LinkEditView.edit_control
 
-  [x] favorite_view:
-
-      favorite_view.py -> LinkView
-      link_view_template.pt -> templates/link.pt
-
-  [ ] file_view:
+  [ ] IFile @@view.html:
 
       file_view.py -> FileView
       file_view_template.pt -> templates/file.pt
 
-  [ ] file_edit_form:
+  [ ] IMutableFile @@edit.html:
 
       file_edit_form.py -> FileEditView
       file_edit_template.pt -> templates/file_edit.pt
       file_edit_control.py -> FileEditView.edit_control
 
-  [ ] image_view:
+  [ ] IImage @@view.html:
 
       image_view.py -> ImageView
       image_view_template.pt -> templates/image.pt
 
-  [ ] image_edit_form:
+  [ ] IMutableImage @@edit.html:
 
       image_edit_form.py -> ImageEditView
       image_edit_template.pt -> templates/image_edit.pt
