@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="Folder">
+ <alias from="(Default)" to="@@view.html"/>
+ <alias from="folder_contents" to="@@edit.html"/>
+ <alias from="folder_edit_form" to="@@properties.html"/>
+ <alias from="index.html" to="@@view.html"/>
+ <alias from="view" to="@@view.html"/>
+</object>
